Fixed: body {background:white} caused the FB Suggest list to be invisible - fixed by setting color:black

--- a/trunk/src/css/freebase-controls.css
+++ b/trunk/src/css/freebase-controls.css
@@ -28,6 +28,7 @@
 	text-align: left;
 	list-style:none;
 	border: 1px solid #808080;
+  color: #000000;
   background-color: #ffffff;
   /* font-size: .9em;*/
   filter:alpha(opacity=95);
